# AtmosphericScattering

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
resources/config/: default_config.json
resources/shaders/: basic_frag.hlsl
resources/shaders/compiled/: atmosphere_frag.spv  basic_frag.spv
scripts/: compile.bat  compile_hlsl.ps1
src/: graphics.rs
src/app/: app.rs
src/config/: config.rs
src/graphics/: renderer.rs  rhi.rs  vulkan.rs
src/graphics/vulkan/: swapchain_utils.rs  vulkan_commands.rs  vulkan_context.rs  vulkan_descriptor_writer.rs  vulkan_descriptors.rs  vulkan_image.rs  vulkan_pipeline.rs  vulkan_pipeline2.rs  vulkan_render_pass.rs  vulkan_render_target.rs  vulkan_renderer.rs  vulkan_resources.rs  vulkan_rhi.rs  vulkan_rhi_data.rs  vulkan_swapchain.rs  vulkan_swapchain2.rs  vulkan_sync_objects.rs  vulkan_utils.rs
src/world/: world.rs
