[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
cgmath = "0.18.0"
log = "0.4.21"
pretty_env_logger = "0.5.0"
serde_json = "1.0.118"
thiserror = "2.0.18"
vulkanalia = { version = "0.35.0", features = ["libloading", "window"] }
winit = "0.30.2"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["fs", "rt", "rt-multi-thread", "macros"] }
serde_repr = "0.1.19"
pub-fields = "0.1.1"
vulkanalia-vma = "0.9.0"
strum = "0.28.0"
strum_macros = "0.28.0"
